# Log_Collector_Final_Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Collectors/: BaseCollector.cpp  BaseCollector.h  ISEPostureCollector.cpp  ISEPostureCollector.h  NVMLogCollector.cpp  NVMLogCollector.h  SWGLogCollector.cpp  SWGLogCollector.h  ZTALogCollector.cpp  ZTALogCollector.h
Collectors/Linux/: Linux_collector.cpp  Linux_collector.h
Collectors/MacOS/: Mac_collector.cpp  Mac_collector.h
Collectors/Windows/: Windows_collector.cpp  Windows_collector.h
Cpp_Version/: CMakeLists.txt  main.cpp
Cpp_Version/Collectors/: NVMLogCollector.cpp  NVMLogCollector.h  SWGLogCollector.h
Cpp_Version/Collectors/Linux/: Linux_collector.cpp
Cpp_Version/Collectors/MacOS/: Mac_collector.cpp  Mac_collector.h
Cpp_Version/Collectors/Windows/: Windows_collector.cpp
Cpp_Version/Utils/: Common.cpp  Common.h
Utils/: Common.cpp  Common.h  Error.cpp  Error.h  Logger.cpp  Logger.h
